<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>neo_fleet_rviz2_plugin</name>
    <version>0.0.0</version>
    <description>
        Multi robot fleet visualizer
    </description>
    <author>Pradheep Padmanabhan</author>
    <author>padmanabhan@neobotix.de</author>
    <maintainer email="ros@neobotix.de">Neobotix GmbH</maintainer>
    <maintainer email="padmanabhan@neobotix.de">Pradheep Padmanabhan</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>nav2_msgs</build_depend>

    <exec_depend>pluginlib</exec_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>rclcpp_action</exec_depend>
    <exec_depend>rclcpp_lifecycle</exec_depend>
    <exec_depend>rviz_common</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav2_msgs</exec_depend>
    <export>
        <rviz plugin="${prefix}/plugins_description.xml"/>
        <build_type>ament_cmake</build_type>
    </export>

</package>


